[build-system]
requires = ["setuptools ~= 63.4", "wheel ~= 0.37", "pbr ~= 5.9"]
build-backend = "pbr.build"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.coverage.run]
omit = ["tests/*", "app.py", "setup.py"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.integration.migrations.env"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["flask_migrate.*", "pytest_flask_ligand.*", "urljoin.*"]
ignore_missing_imports = true

[tool.semantic_release]
branch = "main"
version_pattern = "setup.cfg:version = {version}"
version_variable = "flask_ligand/__init__.py:__version__"
commit_parser = "semantic_release.history.emoji_parser"
use_textual_changelog_sections = true
