[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flask-ligand"
description = """A simple flask library for building microservices with RBAC JWT security, \
  OpenAPI client and SQLAlchemy database support."""
dynamic = ["version"]
readme = "README.rst"
license = "AGPL-3.0"
requires-python = ">= 3.10"
dependencies = [
    "flask==3.1.3",
    "PyJWT==2.13.0",
    "sqlalchemy==2.0.50",
    "cryptography==48.0.0",
    "flask-cors==6.0.2",
    "Flask-Migrate==4.1.0",
    "Flask-JWT-Extended==4.7.4",
    "flask-smorest==0.47.0",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==26.0.0",
    "marshmallow-sqlalchemy==1.5.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "sqlalchemy-utils==0.42.1",
    "urljoin==1.0.0",
]
authors = [
    { name = "Ryan Gard", email = "ryan@gardiancapitol.com" },
]
keywords = [
    "flask",
    "REST",
    "microservice"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Framework :: Flask",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[project.urls]
Changelog = "https://github.com/cowofevil/flask-ligand/blob/main/CHANGELOG.md"
Source = "https://github.com/cowofevil/flask-ligand"
Tracker = "https://github.com/cowofevil/flask-ligand/issues"

[tool.hatch.version]
path = "flask_ligand/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "flask_ligand/**/*.py",
]

[dependency-groups]
pre-commit = [
    "pre-commit==4.6.0",
    "pyproject-pre-commit==0.6.1"
]
black = [
    "black==26.5.1",
    "flake8-pyproject==1.2.4",
    "flake8-bugbear==25.11.29",
    "isort==8.0.1"
]
mypy = [
    "mypy==2.1.0",
    "types-Flask-Cors==6.0.0.20260518",
    "types-mock==5.2.0.20260518",
    "types-PyYAML==6.0.12.20260518",
    "types-requests==2.33.0.20260518",
    "types-smorest==1.1.2",
    "types-sqlalchemy-utils==1.1.0",
    "types-urllib3<1.27",
]
test= [
    "pg8000==1.29.8",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "tox==4.55.0",
    "tox-uv==1.35.2",
    "coverage[toml]==7.14.1",
    "pytest-cov==7.1.0",
    "pytest-flask-ligand",
    "Pygments==2.20.0"
]
dev = [
    "ipython==8.39.0",
    "python-semantic-release==10.5.3",
    {include-group = "pre-commit"},
    {include-group = "black"},
    {include-group = "mypy"},
    {include-group = "test"},
]

[tool.pytest.ini_options]
testpaths = ["tests/unit",]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["312", "313", "314", "311", "310"]

[tool.tox]
skipsdist = true
skip_missing_interpreters = true
env_list = [
    "py310",
    "py311",
    "py312",
    "py313",
    "py314"
]

[tool.tox.env_run_base]
deps = ["-e ."]
dependency_groups = ["test"]
commands = [
    ["pytest", "-p no:warnings"]
]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
  "black --check --diff {args:.}",
  "isort --check-only --diff {args:.}",
]
format-fix = [
  "isort {args:.}",
  "black {args:.}",
]
lint-check = [
    "flake8 {args:.}",
    "mypy"
]
lint-fix = "lint-check"

[tool.flake8]
ignore = "E203,E501,E704,W503,D100,D102,D103,D104,D105,D106,D401"
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["tests/*", "app.py"]

[tool.mypy]
files = ["flask_ligand/**/*.py", "tests/**/*.py"]
install_types = true
non_interactive = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "tests.integration.migrations.env"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["flask_migrate.*", "urljoin.*"]
ignore_missing_imports = true

[tool.hatch.envs.default.extra-scripts]
setup-pre-commit = "pre-commit install"
clean-all = [
    "uv cache clean",
    "rm -fr .tox/",
	"rm -f .coverage",
	"rm -f coverage.xml",
	"rm -fr htmlcov/",
	"rm -fr .pytest_cache/",
    "rm -fr .ruff_cache/",
    "rm -fr .mypy_cache/",
    "rm -fr docs/_build/",
    "find . -name '*.pyc' -exec rm -f {{}} +",
    "find . -name '*.pyo' -exec rm -f {{}} +",
	"find . -name '*~' -exec rm -f {{}} +",
	"find . -name '__pycache__' -exec rm -fr {{}} +",
    "rm -fr build/",
	"rm -fr dist/",
	"rm -fr .eggs/",
    "find . -name '*.egg-info' -exec rm -fr {{}} +",
	"find . -name '*.egg' -exec rm -fr {{}} +"
]
check-integration = """rm -f /tmp/ligand.resp; \
    export RETRY_COUNT=0; \
	until [ -s /tmp/ligand.resp ] || [ $RETRY_COUNT -gt 4 ]; do \
  	touch -f /tmp/ligand.resp; \
	curl --retry 5 --retry-delay 2 --retry-connrefused -o /tmp/ligand.resp -s -X GET --url \
	http://localhost:8080/realms/flask-ligand/.well-known/openid-configuration 2>&1 1>/dev/null; \
	sleep 5; \
	done; \
	if [ ! -s /tmp/ligand.resp ]; then echo 'Integration testing environment is not running!' && exit 1; fi"""
setup-integration = "docker compose up -d"
setup-db = "flask db upgrade -d tests/integration/migrations"
teardown-integration = "docker compose down"
gen-local-env-file = """echo "FLASK_ENV=local\n"\
	"OIDC_DISCOVERY_URL=http://localhost:8080/realms/flask-ligand/.well-known/openid-configuration\n"\
	"SQLALCHEMY_DATABASE_URI=postgresql+pg8000://admin:password@localhost:5432/app" > '.env'"""
gen-admin-access-token = """curl --request POST \
    --url http://localhost:8080/realms/flask-ligand/protocol/openid-connect/token \
    --header 'content-type: application/x-www-form-urlencoded' \
    --data grant_type=client_credentials \
    --data client_id=client-creds-admin \
    --data client_secret=eddVDIP8mIywJjZZfB35z4kBnqvaNkVt"""
gen-user-access-token = """curl --request POST \
    --url http://localhost:8080/realms/flask-ligand/protocol/openid-connect/token \
    --header 'content-type: application/x-www-form-urlencoded' \
    --data grant_type=client_credentials \
    --data client_id=client-creds-user \
    --data client_secret=WBNMrunToNlrifCWgmUesQlkKRI7vuI7"""
gen-no-roles-access-token = """curl --request POST \
    --url http://localhost:8080/realms/flask-ligand/protocol/openid-connect/token \
    --header 'content-type: application/x-www-form-urlencoded' \
    --data grant_type=client_credentials \
    --data client_id=client-creds-no-roles \
    --data client_secret=9kWafigUSgpBxX4SRODlSYWmpjLex7ly"""
run-server = "flask run"
run-server-debug = "FLASK_DEBUG='1' flask run"
test-integration = [
    "setup-integration",
    "check-integration",
    "pytest -p no:warnings tests/integration"
]
test-tox = "tox"
test-tox-fast = "tox -p"
coverage-term = [
    "coverage run --source flask_ligand -m pytest",
    'coverage report -m'
]
coverage-xml = [
    "coverage-term",
    "coverage xml"
]
install = [
    "clean-all",
    "uv pip install '.'"
]
install-edit = "uv pip install -e '.'"
wipe-venv = "uv pip freeze --exclude-editable | xargs uv pip uninstall"
develop =[
    "install-edit",
    "uv pip install --group dev"
]
reset-venv = [
    "wipe-venv",
    "develop"
]
sem-release = "semantic-release version {args}"
sem-noop-release = "semantic-release --noop version {args}"

[tool.hatch.envs.default]
post-install-commands = [
    "develop",
]

[tool.hatch.envs.docs]
# This is an intentional duplicate of 'docs/requirements' dependencies in order to allow for easy local doc generation.
# KEEP THIS IN SYNC WITH DOCS DEPENDENCIES!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
dependencies = [
    "sphinx==8.2.3",
    "myst-parser==4.0.1",
    "linkify-it-py==2.1.0",
    "sphinx-hoverxref==1.4.2",
    "sphinx-issues==5.0.1",
    "sphinx-toolbox==4.1.2",
    "sphinx-autodoc-typehints==3.3.0"
]
post-install-commands = []

[tool.hatch.envs.docs.scripts]
gen-docs = [
    "clean-all",
    "cd docs && make html"
]

[tool.hatch.envs.hatch-test]
# This is an intentional duplicate of 'test' dependencies in order to fix a bug in hatch
# KEEP THIS IN SYNC WITH TEST DEPENDENCIES!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
dependencies = [
    "pg8000==1.29.8",
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "tox==4.55.0",
    "tox-uv==1.35.2",
    "coverage[toml]==7.14.1",
    "pytest-cov==7.1.0",
    "pytest-flask-ligand",
    "Pygments==2.20.0"
]

[tool.hatch.envs.hatch-test.scripts]
run = [
    "coverage run -m pytest -p no:warnings {env:HATCH_TEST_ARGS} tests/unit",
    "cov-report"
]
run-cov = "run"
cov-combine = "coverage combine"
cov-report = "coverage report"

[tool.hatch.publish.index]
disable = true

[tool.semantic_release]
build_command = "hatch build"
tag_format = "v{version}"
version_variables = [ "flask_ligand/__init__.py:__version__", ]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "emoji"
logging_use_named_masks = false
major_on_zero = false
allow_zero_version = true
no_git_verify = false
add_partial_tags = false

[tool.semantic_release.commit_parser_options]
default_bump_level = 0
parse_squash_commits = false

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''\[?.*ci.*\[? .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''Update? .*''',
]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.remote]
name = "origin"
type = "github"
env = "GH_TOKEN"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
