[metadata]
name = flask-ligand
version = 0.6.2
summary = A simple flask library for building microservices with RBAC JWT security, OpenAPI client and SQLAlchemy database support.
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Ryan Gard
author_email = ryan@gardiancapitol.com
keywords = flask
license = GNU Affero General Public License v3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: Flask
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Application Frameworks
    Typing :: Typed
project_urls =
    Changelog=https://github.com/cowofevil/flask-ligand/blob/main/CHANGELOG.md
    Source=https://github.com/cowofevil/flask-ligand
    Tracker=https://github.com/cowofevil/flask-ligand/issues

[files]
packages =
    flask_ligand
data_files =
    README.rst = README.rst
    flask_ligand/py.typed = flask_ligand/py.typed

[bdist_wheel]
universal = 1

[options]
python_requires = >= 3.10

[pbr]
skip_authors = True
skip_changelog = True
skip_reno = True

[flake8]
max-line-length = 120
